# OpenRAG

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
openrag/: __init__.py  rag.py
openrag/chunkers/: __init__.py  base.py  mab_chunker.py  simple_chunker.py
openrag/core/: __init__.py  chunk.py  document.py  pipeline.py
openrag/generators/: __init__.py  base.py  ollama_generator.py
openrag/parsers/: __init__.py  audio_parser.py  base.py  docx_parser.py  pdf_parser.py  router.py  txt_parser.py
openrag/retrievers/: __init__.py  base.py  keyword_retriever.py
tests/: test_audio_parser.py  test_chunker.py  test_docx_parser.py  test_mab_chunker.py  test_parser_router.py  test_pdf_parser.py  test_retriever.py
