[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openrag"
version = "0.1.0"
description = "A small, extensible Python framework for local retrieval-augmented generation."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "OpenRAG Contributors" }
]
keywords = ["rag", "ollama", "retrieval", "local-ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "requests>=2.31.0",
]

[project.optional-dependencies]
audio = [
  "openai-whisper>=20231117",
]
pdf = [
  "pdfplumber>=0.11.0",
]
docx = [
  "python-docx>=1.1.0",
]
documents = [
  "pdfplumber>=0.11.0",
  "python-docx>=1.1.0",
]
dev = [
  "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/openrag/openrag"
Issues = "https://github.com/openrag/openrag/issues"

[tool.setuptools.packages.find]
include = ["openrag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
